api-stadistics-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-stadistics
  labels:
    app: api-stadistics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-stadistics
  template:
    metadata:
      labels:
        app: api-stadistics
    spec:
      revisionHistoryLimit: 0 # Default to 10 if not specified
      containers:
        - image: "darnack/apistadistics:latest"
          name: api-stadistics
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "10m"
              memory: "200Mi"
            limits:
              cpu: "100m"
