api-stadistics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-stadistics
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: api-stadistics
  type: ClusterIP
