api-stadistics-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-stadistics
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: api-stadistics
            port:
              number: 8989
        path: /(/|$)(.*)
        pathType: ImplementationSpecific
